solarpowerlog (0.25-1) UNRELEASED; urgency=medium

  * New upstream release.
    - All patches applied, remove d/patches.
  * Primary project side is now GitHub, updating accordingly in d/*.
  * Update d/watch to point to GitHub.
  * Adding upstream key for signature verification.
  * Update d/copyright years.

 -- Tobias Frost <tobi@debian.org>  Thu, 06 Jan 2022 22:54:24 +0100

solarpowerlog (0.24-9) unstable; urgency=medium

  [ Debian Janitor ]
  * Use secure copyright file specification URI.
  * Bump debhelper from old 11 to 12.
  * Set debhelper-compat version in Build-Depends.
  * Set upstream metadata fields: Archive, Repository.

  [ Tobias Frost ]
  * Force C+11, as C++17 will make it FTBFS. (Closes: #984340)

 -- Tobias Frost <tobi@debian.org>  Fri, 15 Oct 2021 18:14:39 +0200

solarpowerlog (0.24-8) unstable; urgency=medium

  * Make github repo the primary one and update d/control with its URL.
  * Fix FTBFS with boost1.67", thanks Giovanni Mascellani for the patch.
    (Closes: #911952)
  * Update d/control -- it had still my non-debian email in it.
  * Bump compat level to 11. This allows to remove some B-Ds and to simplify
    d/rules a bit.
  * Bump S-B to 4.2.1, no changes required, execpt adding Rules-Required-Root.

 -- Tobias Frost <tobi@debian.org>  Thu, 01 Nov 2018 20:08:03 +0100

solarpowerlog (0.24-7) unstable; urgency=medium

  * New patch to fix FTBFS with GCC-7 (Closes: #853665)

 -- Tobias Frost <tobi@debian.org>  Sun, 06 Aug 2017 17:19:55 -0400

solarpowerlog (0.24-6) unstable; urgency=medium

  * Both patches have been applied upstream in the repository, editing dep3
    header and renaming patches to have leading numbers.
  * Change B-D from liblog4cxx10-dev to liblog4cxx-dev
  * Add patch to fix libconfig1.5 ABI change

 -- Tobias Frost <tobi@debian.org>  Wed, 05 Aug 2015 20:57:44 +0200

solarpowerlog (0.24-5) unstable; urgency=medium

  * New patch 02-dont-ovewrite-cppflags.patch to avoid
    stomping over CPPFLAGS in configure.ac