@@ -6,6 +6,8 @@ solarpowerlog (0.25-1) UNRELEASED; urgency=medium
   * Update d/watch to point to GitHub.
   * Adding upstream key for signature verification.
   * Update d/copyright years.
+  * Fixing init.d-script-should-always-start-service by defaulting to enabled.
+  * Update lintian overrides to adress some false positives.
 
  -- Tobias Frost <tobi@debian.org>  Thu, 06 Jan 2022 22:54:24 +0100
 
